k8s/yaml/NodAffinity_1.yaml
# 强制亲和
# 与、或两种匹配原则
# 同一个matchExpressions之中的多个key为与
# 同一个nodeSelectorTerms下的多个matchExpressions之间为或
# 
apiVersion: v1
kind: Pod
metadata:
  name: nodeaffinity
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: key1
            operator: In
            values:
            - value1
          - key: position
            operator: In
            values:
            - '3'
        - matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd
