k8s/yaml/NodAffinity_2.yaml
# 首选亲和
# 权重值优先
# 同时匹配到多台机器，权重值求和后值最大的优先
apiVersion: v1
kind: Pod
metadata:
  name: my-test-2
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - preference:
            matchExpressions:
            - key: position
              operator: In
              values:
              - '3'
          weight: 5
        - preference:
            matchExpressions:
            - key: app
              operator: In
              values:
              - front
          weight: 4
        - preference:
            matchExpressions:
            - key: disktype
              operator: In
              value:
              - ssd
          weight: 10
