k8s/yaml/Deployment-nginx.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: httpd
  name: nginx-daemon
  namespace: default

spec:
  type: NodePort
  ports:
    - port: 880
      nodePort: 30008
      targetPort: 80
  selector:
    k8s-app: nginx-daemon

---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: nginx-daemon
  name: nginx-daemon
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: nginx-daemon
  template:
    metadata:
      labels:
        k8s-app: nginx-daemon
    spec:
      containers:
        - name: nginx-daemon
          image: nginx
          imagePullPolicy: ifNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          #arts:
          #  - -d
          volumeMounts:
            - name: wwwconf
              mountPath: /usr/share/nginx/conf
          volumeMounts:
            - name: wwwindex
              mountPath: /usr/share/nginx/html
    volumes:
        - name: wwwconf
          configMap:
            name: nginx-conf
        - name: wwwindex
          configMap:
            name: nginx-index
            items:
            - key: default.html
              path: index.html
            - key: default.php
              path: index.php
