k8s/yaml/Deployment_mysql.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myspace

---

kind: Service
apiVersion: v1
metadata:
  name: my-mysql
  namespace: myspace

spec:
  type: NodePort
  selector:
    app: my-mysql
  ports:
    - port: 3306
      nodePort: 30306
      targetPort: 3306

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-mysql
  namespace: myspace
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: my-mysql
  template:
    metadata:
      labels:
        app: my-mysql
    spec:
      containers:
        - name: my-mysql
          image: mysql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
